--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -6,7 +6,7 @@ ecommerce_project:
       method: service-account
       project: 'my-etl-project-434409'
       dataset: 'etl_dataset'
-      keyfile: '/opt/airflow/data/key/my-etl-project-434409-3e70c40f6d3a.json'
+      keyfile:  "{{ env_var('GOOGLE_APPLICATION_CREDENTIALS') }}"
       threads: 4
       timeout_seconds: 300
       location: 'US'
